site/themes/mttt/sass/_media.queries.scss
// @media only screen and (min-width: 768px) { … }
@media only screen and (max-width: 767px) {
  html, body { font-size: 18px; }
  .navbar { padding-left: .5rem; }
}

@media only screen and (max-width: 479px) {
  html, body { font-size: 18px; }
  h2 { font-size: 1.5rem; }
  h3 { font-size: 1.35rem; }
  pre { font-size: 1em; }
  .meta, .footer { font-size: .89rem; }
  .post_content_info { flex-direction: column; font-size: .78rem; }
}

